--- a/LayoutManager/LayoutFrameWindow.resx
+++ b/LayoutManager/LayoutFrameWindow.resx
@@ -244,7 +244,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA4
-        FgAAAk1TRnQBSQFMAgEBEwEAARwBAQEcAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        FgAAAk1TRnQBSQFMAgEBEwEAASQBAQEkAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAVADAAEBAQABCAYAARQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -546,6 +546,9 @@
   <data name="menuItemDefaultDriverParameters.Text" xml:space="preserve">
     <value>Default Driver &amp;Parameters...</value>
   </data>
+  <data name="menuItemTrainTracking.Text" xml:space="preserve">
+    <value>Train  tracking...</value>
+  </data>
   <data name="menuItemCommonDestinations.Text" xml:space="preserve">
     <value>"Smart" Destinations...</value>
   </data>
@@ -784,7 +787,7 @@
     <value>tripsMonitor</value>
   </data>
   <data name="&gt;&gt;tripsMonitor.Type" xml:space="preserve">
-    <value>LayoutManager.Tools.Controls.TripsMonitor, LayoutEditingTools, Version=1.0.4460.33958, Culture=neutral, PublicKeyToken=null</value>
+    <value>LayoutManager.Tools.Controls.TripsMonitor, LayoutEditingTools, Version=1.0.6822.20610, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;tripsMonitor.Parent" xml:space="preserve">
     <value>panelTripsMonitor</value>
@@ -865,7 +868,7 @@
     <value>messageViewer</value>
   </data>
   <data name="&gt;&gt;messageViewer.Type" xml:space="preserve">
-    <value>LayoutManager.MessageViewer, LayoutManager, Version=1.0.4460.33959, Culture=neutral, PublicKeyToken=null</value>
+    <value>LayoutManager.MessageViewer, LayoutManager, Version=1.0.6822.20612, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;messageViewer.Parent" xml:space="preserve">
     <value>panelMessageViewer</value>
@@ -943,7 +946,7 @@
     <value>locomotivesViewer</value>
   </data>
   <data name="&gt;&gt;locomotivesViewer.Type" xml:space="preserve">
-    <value>LayoutManager.LocomotivesViewer, LayoutManager, Version=1.0.4460.33959, Culture=neutral, PublicKeyToken=null</value>
+    <value>LayoutManager.LocomotivesViewer, LayoutManager, Version=1.0.6822.20612, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;locomotivesViewer.Parent" xml:space="preserve">
     <value>panelLocomotiveViewer</value>
@@ -1018,7 +1021,7 @@
     <value>layoutControlViewer</value>
   </data>
   <data name="&gt;&gt;layoutControlViewer.Type" xml:space="preserve">
-    <value>LayoutManager.CommonUI.Controls.LayoutControlViewer, LayoutCommonUI, Version=1.0.4460.27665, Culture=neutral, PublicKeyToken=null</value>
+    <value>LayoutManager.CommonUI.Controls.LayoutControlViewer, LayoutCommonUI, Version=1.0.6822.20609, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;layoutControlViewer.Parent" xml:space="preserve">
     <value>panelLayoutControl</value>
@@ -1486,6 +1489,12 @@
   <data name="&gt;&gt;menuItemCompile.Type" xml:space="preserve">
     <value>System.Windows.Forms.MenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;menuItemVerificationOptions.Name" xml:space="preserve">
+    <value>menuItemVerificationOptions</value>
+  </data>
+  <data name="&gt;&gt;menuItemVerificationOptions.Type" xml:space="preserve">
+    <value>System.Windows.Forms.MenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;menuItem8.Name" xml:space="preserve">
     <value>menuItem8</value>
   </data>
@@ -1852,10 +1861,10 @@
   <data name="&gt;&gt;menuItem13.Type" xml:space="preserve">
     <value>System.Windows.Forms.MenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;menuItemVerificationOptions.Name" xml:space="preserve">
-    <value>menuItemVerificationOptions</value>
+  <data name="&gt;&gt;menuItemTrainTracking.Name" xml:space="preserve">
+    <value>menuItemTrainTracking</value>
   </data>
-  <data name="&gt;&gt;menuItemVerificationOptions.Type" xml:space="preserve">
+  <data name="&gt;&gt;menuItemTrainTracking.Type" xml:space="preserve">
     <value>System.Windows.Forms.MenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
