XmlQueryList is UserControl
Bugs fixed in dialog layout

--- a/LayoutCommonUI/Controls/XmlQueryList.resx
+++ b/LayoutCommonUI/Controls/XmlQueryList.resx
@@ -57,16 +57,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageListTripState.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="imageListArrows.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="imageListTripState.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="imageListArrows.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAARgsAAAJNU0Z0AUkBTAIBAQkB
-        AAEMAQABDAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEwAwABAQEAAQgG
-        AAEMGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAFAgAAAJNU0Z0AUkBTAIBAQIB
+        AAEgAQABIAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
+        AAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
         AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
         kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
         MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
@@ -93,26 +93,13 @@
         AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
         /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
         AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
-        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AP8ATAAB7P8A+wAI+TcACvkZAAH/AQAC/xgADPkH
-        AAYHCQAB/wHsAf8BAAL/AewB/xUAA/kIAAP5BwAEBwkABP8BAAX/FAAE+QEABAcBAAT5FAAB7AX/AQAC
-        /wHsFAAF+QEAAgcBAAX5EwAG/wIABP8TAAb5AgAG+RMABv8CAAT/EwAG+QIABvkWAAL/AgAC/xYABfkB
-        AAIHAQAF+RMABP8CAAL5BP8LAAHsBwAE+QEABAcBAAT5CAACBwoAAewB/wIAAv8C+QH/AewUAAP5CAAD
-        +QgAAgcKAAf/AvkB/xUADPkIAAQHCgAB/wHsAf8BAAL/AewB/xcACvkZAAH/AQAC/xoACPnJAAYCCgAG
-        +wkACPkLAAEHAewKAAoCBgAK+wYACvkKAAEHAewJAAwCBAAM+wQADPkJAAEHAewJAAwCBAAM+wMADvkI
-        AAHsAf8IAA4CAgAO+wIAAfkC/wL5Af8C+QH/AvkB/wL5CAAB7AH/CAAOAgIADvsCAAH/AvkB/wH5Af8B
-        +QH/AfkB/wH5Af8C+QcAAf8B7AL/BwAOAgIADvsCAAL5Av8B+QH/AfkB/wH5Af8B+QL/AfkHAAH/AuwB
-        /wcADgICAA77AgAB+QH/A/kB/wH5Af8B+QH/AfkB/wH5Af8GAAH/AewC/wHsAf8GAA4CAgAO+wIAAf8C
-        +QH/AfkB/wH5Af8B+QH/AfkB/wH5Af8GAAb/BgAOAgIADvsCAAH5Av8B+QP/AfkB/wL5Av8B+QcABP8I
-        AAwCBAAM+wMADvkIAAL/CQAMAgQADPsEAAz5FQAKAgYACvsGAAr5GAAGAgoABvsJAAj5RAABQgFNAT4H
-        AAE+AwABKAMAAUADAAEwAwABAQEAAQEFAAGAAQEWAAP/AQAC/wYAAf4B/wYAAfwB/wYAAfgB/wYAAfAB
-        fwYAAeIBfwYAAcYBPwYAAf8BPwYAAf8BnwYAAf8BjwYAAf8BzwYAAf8B5wYAAf8B8wYAAf8B+QYAAf8B
-        /QYAAv8GAAHwAQ8C/wH4AR8C/wHgAQcB4AEHAeABBwH+Af8BwAEDAeABBwHAAQMB/AH/AYABAQHwAQ8B
-        gAEBAfgB+QIAAfgBHwGAAQEB8AFzAgAB+wHfAgAB4gFnAgAB/QG/AgABxgEPAgAB/gF/AgAB/wEfAgAB
-        /gF/AgAB/wEfAgAB/QG/AgAB/gEPAgAB+gFfAgAB/AHPAgAB+gFfAYABAQH5AecBgAEBAfQBLwGAAQEB
-        /wHzAcABAwLnAcABAwH/AfkB4AEHAeABBwHgAQcB/wH9AfABDwL/AfgBHwT/AfgBHwH4AR8B8AEPAf4B
-        fwHgAQcB4AEHAeABBwH8AT8BwAEDAcABAwHAAQMB/AE/AYABAQGAAQEBgAEBAfwBPwGAAQEBgAEBAgAB
-        /AE/AwABAQIAAfgBHwYAAfgBHwYAAfABDwYAAfABDwYAAfABDwYAAfABDwGAAQEBgAEBAgAB+AEfAYAB
-        AQGAAQEBgAEBAfwBPwHAAQMBwAEDAcABAwL/AeABBwHgAQcB4AEHAv8B+AEfAfgBHwHwAQ8L
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8IAAIGDgACBi4AAgYOAAIGKQACBgMAAgYOAAIGKQAE
+        BgEAAgYOAAIGKQAHBg0ABAYoAAgGDAAEBigACgYJAAYGJwAMBgcABgYnAAwGBgAIBiYACgYIAAgGJgAI
+        BgkACgYlAAcGCgAKBiUABAYBAAIGCQAMBiQAAgYDAAIGCQAMBikAAgYOAAIGLgACBg4AAgYnAAFCAU0B
+        PgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB/gF/Af4BfwQAAf4BfwH+AX8EAAHOAX8B
+        /gF/BAABwgF/Af4BfwQAAcABfwH8AT8EAAHAAT8B/AE/BAABwAEPAfgBHwQAAcABAwH4AR8EAAHAAQMB
+        8AEPBAABwAEPAfABDwQAAcABPwHgAQcEAAHAAX8B4AEHBAABwgF/AcABAwQAAc4BfwHAAQMEAAH+AX8B
+        /gF/BAAB/gF/Af4BfwQACw==
 </value>
   </data>
 </root>
